# movie_streamlit

./: README.md  app.py  pyproject.toml
